Propagate OIDC Config for Nutanix (#4711)
* Propagate OIDC Config for Nutanix

Ensure OIDC config is propogated to KubeAdmControlPlane via
API Server extra args for the Nutanix provider.

* Add OIDC related tests for Nutanix provider

- Added OIDC e2e tests for Kubernetes 1.21 - 1.25
- Added unit test for OIDC config w/ Nutanix

--- a/pkg/providers/nutanix/testdata/expected_results_oidc.yaml
+++ b/pkg/providers/nutanix/testdata/expected_results_oidc.yaml
@@ -1,92 +1,79 @@
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: NutanixCluster
 metadata:
-  name: "{{.clusterName}}"
-  namespace: "{{.eksaSystemNamespace}}"
+  name: "eksa-unit-test"
+  namespace: "eksa-system"
 spec:
   prismCentral:
-{{- if .nutanixAdditionalTrustBundle }}
-    additionalTrustBundle:
-      kind: String
-      data: |
-{{ .nutanixAdditionalTrustBundle | indent 8 }}
-{{- end }}
-    address: "{{.nutanixEndpoint}}"
-    port: {{.nutanixPort}}
-    insecure: {{.nutanixInsecure}}
+    address: "prism.nutanix.com"
+    port: 9440
+    insecure: false
     credentialRef:
-      name: "{{.clusterName}}"
+      name: "eksa-unit-test"
       kind: Secret
   controlPlaneEndpoint:
-    host: "{{.controlPlaneEndpointIp}}"
+    host: "test-ip"
     port: 6443
 ---
 apiVersion: cluster.x-k8s.io/v1beta1
 kind: Cluster
 metadata:
   labels:
-    cluster.x-k8s.io/cluster-name: "{{.clusterName}}"
-  name: "{{.clusterName}}"
-  namespace: "{{.eksaSystemNamespace}}"
+    cluster.x-k8s.io/cluster-name: "eksa-unit-test"
+  name: "eksa-unit-test"
+  namespace: "eksa-system"
 spec:
   clusterNetwork:
     services:
-      cidrBlocks: {{.serviceCidrs}}
+      cidrBlocks: [10.96.0.0/12]
     pods:
-      cidrBlocks: {{.podCidrs}}
+      cidrBlocks: [192.168.0.0/16]
     serviceDomain: "cluster.local"
   controlPlaneRef:
     apiVersion: controlplane.cluster.x-k8s.io/v1beta1
     kind: KubeadmControlPlane
-    name: "{{.clusterName}}"
+    name: "eksa-unit-test"
   infrastructureRef:
     apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
     kind: NutanixCluster
-    name: "{{.clusterName}}"
+    name: "eksa-unit-test"
 ---
 apiVersion: controlplane.cluster.x-k8s.io/v1beta1
 kind: KubeadmControlPlane
 metadata:
-  name: "{{.clusterName}}"
-  namespace: "{{.eksaSystemNamespace}}"
+  name: "eksa-unit-test"
+  namespace: "eksa-system"
 spec:
-  replicas: {{.controlPlaneReplicas}}
-  version: "{{.kubernetesVersion}}"
+  replicas: 3
+  version: "v1.19.8-eks-1-19-4"
   machineTemplate:
     infrastructureRef:
       apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
       kind: NutanixMachineTemplate
-      name: "{{.controlPlaneTemplateName}}"
+      name: "<no value>"
   kubeadmConfigSpec:
     clusterConfiguration:
-      imageRepository: "{{.kubernetesRepository}}"
+      imageRepository: "public.ecr.aws/eks-distro/kubernetes"
       apiServer:
         certSANs:
           - localhost
           - 127.0.0.1
           - 0.0.0.0
-{{- if .apiServerExtraArgs }}
         extraArgs:
-{{ .apiServerExtraArgs.ToYaml | indent 10 }}
-{{- end }}
+          oidc-client-id: my-client-id
+          oidc-issuer-url: https://mydomain.com/issuer
       controllerManager:
         extraArgs:
           enable-hostpath-provisioner: "true"
       dns:
-        imageRepository: {{.corednsRepository}}
-        imageTag: {{.corednsVersion}}
+        imageRepository: public.ecr.aws/eks-distro/coredns
+        imageTag: v1.8.0-eks-1-19-4
       etcd:
-{{- if .externalEtcd }}
         external:
           endpoints: []
           caFile: "/etc/kubernetes/pki/etcd/ca.crt"
           certFile: "/etc/kubernetes/pki/apiserver-etcd-client.crt"
           keyFile: "/etc/kubernetes/pki/apiserver-etcd-client.key"
-{{- else }}
-        local:
-          imageRepository: {{.etcdRepository}}
-          imageTag: {{.etcdImageTag}}
-{{- end }}
     files:
       - content: |
           apiVersion: v1
@@ -98,7 +85,7 @@ spec:
           spec:
             containers:
               - name: kube-vip
-                image: {{.kubeVipImage}}
+                image: 
                 imagePullPolicy: IfNotPresent
                 args:
                   - manager
@@ -106,7 +93,7 @@ spec:
                   - name: vip_arp
                     value: "true"
                   - name: address
-                    value: "{{.controlPlaneEndpointIp}}"
+                    value: "test-ip"
                   - name: port
                     value: "6443"
                   - name: vip_cidr
@@ -126,9 +113,9 @@ spec:
                   - name: vip_retryperiod
                     value: "2"
                   - name: svc_enable
-                    value: "{{.kubeVipSvcEnable}}"
+                    value: "false"
                   - name: lb_enable
-                    value: "{{.kubeVipLBEnable}}"
+                    value: "false"
                 securityContext:
                   capabilities:
                     add:
@@ -156,16 +143,16 @@ spec:
           #cgroup-driver: cgroupfs
           eviction-hard: nodefs.available<0%,nodefs.inodesFree<0%,imagefs.available<0%
     users:
-      - name: "{{.controlPlaneSshUsername }}"
+      - name: "mySshUsername"
         lockPassword: false
         sudo: ALL=(ALL) NOPASSWD:ALL
         sshAuthorizedKeys:
-          - "{{.controlPlaneSshAuthorizedKey}}"
+          - "mySshAuthorizedKey"
     preKubeadmCommands:
-      - hostnamectl set-hostname "{{`{{ ds.meta_data.hostname }}`}}"
+      - hostnamectl set-hostname "{{ ds.meta_data.hostname }}"
       - echo "::1         ipv6-localhost ipv6-loopback" >/etc/hosts
       - echo "127.0.0.1   localhost" >>/etc/hosts
-      - echo "127.0.0.1   {{`{{ ds.meta_data.hostname }}`}}" >> /etc/hosts
+      - echo "127.0.0.1   {{ ds.meta_data.hostname }}" >> /etc/hosts
       # This section should be removed once these packages are added to the image builder process
       - apt update
       - apt install -y nfs-common open-iscsi
@@ -177,37 +164,23 @@ spec:
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: NutanixMachineTemplate
 metadata:
-  name: "{{.controlPlaneTemplateName}}"
-  namespace: "{{.eksaSystemNamespace}}"
+  name: "<no value>"
+  namespace: "eksa-system"
 spec:
   template:
     spec:
-      providerID: "nutanix://{{.clusterName}}-m1"
-      vcpusPerSocket: {{.vcpusPerSocket}}
-      vcpuSockets: {{.vcpuSockets}}
-      memorySize: {{.memorySize}}
-      systemDiskSize: {{.systemDiskSize}}
+      providerID: "nutanix://eksa-unit-test-m1"
+      vcpusPerSocket: 1
+      vcpuSockets: 4
+      memorySize: 8Gi
+      systemDiskSize: 40Gi
       image:
-{{- if (eq .imageIDType "name") }}
         type: name
-        name: "{{.imageName}}"
-{{ else if (eq .imageIDType "uuid") }}
-        type: uuid
-        uuid: "{{.imageUUID}}"
-{{ end }}
+        name: "prism-image"
+
       cluster:
-{{- if (eq .nutanixPEClusterIDType "name") }}
         type: name
-        name: "{{.nutanixPEClusterName}}"
-{{- else if (eq .nutanixPEClusterIDType "uuid") }}
-        type: uuid
-        uuid: "{{.nutanixPEClusterUUID}}"
-{{ end }}
+        name: "prism-cluster"
       subnet:
-{{- if (eq .subnetIDType "name") }}
         - type: name
-          name: "{{.subnetName}}"
-{{- else if (eq .subnetIDType "uuid") }}
-        - type: uuid
-          uuid: "{{.subnetUUID}}"
-{{ end }}
+          name: "prism-subnet"
