--- a/release/config/crd/bases/anywhere.eks.amazonaws.com_releases.yaml
+++ b/release/config/crd/bases/anywhere.eks.amazonaws.com_releases.yaml
@@ -57,6 +57,83 @@ spec:
                         darwin:
                           description: EKS Anywhere Darwin binary
                           properties:
+                            arch:
+                              description: Architectures of the asset
+                              items:
+                                type: string
+                              type: array
+                            description:
+                              type: string
+                            name:
+                              description: The asset name
+                              type: string
+                            os:
+                              description: Operating system of the asset
+                              enum:
+                              - linux
+                              - darwin
+                              - windows
+                              type: string
+                            osName:
+                              description: Name of the OS like ubuntu, bottlerocket
+                              type: string
+                            sha256:
+                              description: The sha256 of the asset, only applies for
+                                'file' store
+                              type: string
+                            sha512:
+                              description: The sha512 of the asset, only applies for
+                                'file' store
+                              type: string
+                            uri:
+                              description: The URI where the asset is located
+                              type: string
+                          type: object
+                        linux:
+                          description: EKS Anywhere Linux binary
+                          properties:
+                            arch:
+                              description: Architectures of the asset
+                              items:
+                                type: string
+                              type: array
+                            description:
+                              type: string
+                            name:
+                              description: The asset name
+                              type: string
+                            os:
+                              description: Operating system of the asset
+                              enum:
+                              - linux
+                              - darwin
+                              - windows
+                              type: string
+                            osName:
+                              description: Name of the OS like ubuntu, bottlerocket
+                              type: string
+                            sha256:
+                              description: The sha256 of the asset, only applies for
+                                'file' store
+                              type: string
+                            sha512:
+                              description: The sha512 of the asset, only applies for
+                                'file' store
+                              type: string
+                            uri:
+                              description: The URI where the asset is located
+                              type: string
+                          type: object
+                      required:
+                      - darwin
+                      - linux
+                      type: object
+                    eksACLI:
+                      description: EKS Anywhere AMD64 binary bundle
+                      properties:
+                        darwin:
+                          description: EKS Anywhere Darwin binary
+                          properties:
                             amd64:
                               properties:
                                 arch:
@@ -227,6 +304,7 @@ spec:
                   - bundleManifestUrl
                   - date
                   - eksABinary
+                  - eksACLI
                   - gitCommit
                   - gitTag
                   - number
