Allow users to configure NTP servers
Signed-off-by: Abhinav Pandey <abhinavmpandey08@gmail.com>

--- a/config/crd/bases/anywhere.eks.amazonaws.com_vspheremachineconfigs.yaml
+++ b/config/crd/bases/anywhere.eks.amazonaws.com_vspheremachineconfigs.yaml
@@ -50,6 +50,24 @@ spec:
                 type: integer
               folder:
                 type: string
+              hostOSConfiguration:
+                description: HostOSConfiguration defines the configuration settings
+                  on the host OS.
+                properties:
+                  ntpConfiguration:
+                    description: NTPConfiguration defines the NTP configuration on
+                      the host OS.
+                    properties:
+                      servers:
+                        items:
+                          type: string
+                        type: array
+                    required:
+                    - servers
+                    type: object
+                required:
+                - ntpConfiguration
+                type: object
               memoryMiB:
                 type: integer
               numCPUs:
