Add Tinkerbell resources to RBAC

--- a/config/manifest/eksa-components.yaml
+++ b/config/manifest/eksa-components.yaml
@@ -5789,6 +5789,8 @@ rules:
   - awssnowmachinetemplates
   - dockerclusters
   - dockermachinetemplates
+  - tinkerbellclusters
+  - tinkerbellmachinetemplates
   - vsphereclusters
   - vspheremachinetemplates
   verbs:
