--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -66,6 +66,8 @@ rules:
   - dockerdatacenterconfigs/finalizers
   - snowippools/finalizers
   - snowmachineconfigs/finalizers
+  - tinkerbelldatacenterconfigs/finalizers
+  - tinkerbellmachineconfigs/finalizers
   - vspheredatacenterconfigs/finalizers
   - vspheremachineconfigs/finalizers
   verbs:
@@ -81,6 +83,8 @@ rules:
   - dockerdatacenterconfigs/status
   - snowippools/status
   - snowmachineconfigs/status
+  - tinkerbelldatacenterconfigs/status
+  - tinkerbellmachineconfigs/status
   - vspheredatacenterconfigs/status
   - vspheremachineconfigs/status
   verbs:
@@ -183,6 +187,8 @@ rules:
   - awssnowmachinetemplates
   - dockerclusters
   - dockermachinetemplates
+  - tinkerbellclusters
+  - tinkerbellmachinetemplates
   - vsphereclusters
   - vspheremachinetemplates
   verbs:
