--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -199,6 +199,17 @@ rules:
   - patch
   - update
   - watch
+- apiGroups:
+  - tinkerbell.org
+  resources:
+  - hardware
+  - hardware/status
+  verbs:
+  - get
+  - list
+  - patch
+  - update
+  - watch
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
