--- a/pkg/providers/tinkerbell/stack/testdata/expected_with_hook_override.yaml
+++ b/pkg/providers/tinkerbell/stack/testdata/expected_with_hook_override.yaml
@@ -1,17 +1,17 @@
 boots:
   args:
-    - -dhcp-addr=0.0.0.0:67
-    - -osie-path-override=https://my-local-web-server/hook
+  - -dhcp-addr=0.0.0.0:67
+  - -osie-path-override=https://my-local-web-server/hook
   deploy: true
   env:
-    - name: TINKERBELL_TLS
-      value: "false"
-    - name: TINKERBELL_GRPC_AUTHORITY
-      value: 1.2.3.4:42113
-    - name: BOOTS_EXTRA_KERNEL_ARGS
-      value: tink_worker_image=public.ecr.aws/eks-anywhere/tink-worker:latest
-    - name: DATA_MODEL_VERSION
-      value: kubernetes
+  - name: DATA_MODEL_VERSION
+    value: kubernetes
+  - name: TINKERBELL_TLS
+    value: "false"
+  - name: TINKERBELL_GRPC_AUTHORITY
+    value: 1.2.3.4:42113
+  - name: BOOTS_EXTRA_KERNEL_ARGS
+    value: tink_worker_image=public.ecr.aws/eks-anywhere/tink-worker:latest
   image: public.ecr.aws/eks-anywhere/boots:latest
 createNamespace: false
 envoy:
@@ -19,12 +19,9 @@ envoy:
   externalIp: 1.2.3.4
   image: public.ecr.aws/eks-anywhere/envoy:latest
 hegel:
-  args:
-    - --grpc-use-tls=false
-  deploy: true
   env:
-    - name: TRUSTED_PROXIES
-      value: 192.168.0.0/16
+  - name: HEGEL_TRUSTED_PROXIES
+    value: 192.168.0.0/16
   image: public.ecr.aws/eks-anywhere/hegel:latest
   port:
     hostPortEnabled: false
@@ -33,13 +30,12 @@ kubevip:
   image: public.ecr.aws/eks-anywhere/kube-vip:latest
 namespace: eksa-system
 rufio:
-  deploy: true
   image: public.ecr.aws/eks-anywhere/rufio:latest
 tinkController:
-  deploy: true
   image: public.ecr.aws/eks-anywhere/tink-controller:latest
 tinkServer:
-  deploy: true
+  args:
+  - --tls=false
   image: public.ecr.aws/eks-anywhere/tink-server:latest
   port:
     hostPortEnabled: false
