--- a/pkg/providers/tinkerbell/stack/testdata/expected_with_namespace_create_true.yaml
+++ b/pkg/providers/tinkerbell/stack/testdata/expected_with_namespace_create_true.yaml
@@ -4,14 +4,14 @@ boots:
   - -osie-path-override=https://anywhere-assests.eks.amazonaws.com/tinkerbell/hook
   deploy: true
   env:
-  - name: BOOTS_EXTRA_KERNEL_ARGS
-    value: tink_worker_image=public.ecr.aws/eks-anywhere/tink-worker:latest
-  - name: DATA_MODEL_VERSION
-    value: kubernetes
   - name: TINKERBELL_TLS
     value: "false"
   - name: TINKERBELL_GRPC_AUTHORITY
     value: 1.2.3.4:42113
+  - name: BOOTS_EXTRA_KERNEL_ARGS
+    value: tink_worker_image=public.ecr.aws/eks-anywhere/tink-worker:latest
+  - name: DATA_MODEL_VERSION
+    value: kubernetes
   image: public.ecr.aws/eks-anywhere/boots:latest
 createNamespace: true
 envoy:
@@ -19,11 +19,8 @@ envoy:
   externalIp: 1.2.3.4
   image: public.ecr.aws/eks-anywhere/envoy:latest
 hegel:
-  args:
-  - --grpc-use-tls=false
-  deploy: true
   env:
-  - name: TRUSTED_PROXIES
+  - name: HEGEL_TRUSTED_PROXIES
     value: 192.168.0.0/16
   image: public.ecr.aws/eks-anywhere/hegel:latest
   port:
@@ -33,15 +30,12 @@ kubevip:
   image: public.ecr.aws/eks-anywhere/kube-vip:latest
 namespace: eksa-system
 rufio:
-  deploy: true
   image: public.ecr.aws/eks-anywhere/rufio:latest
 tinkController:
-  deploy: true
   image: public.ecr.aws/eks-anywhere/tink-controller:latest
 tinkServer:
   args:
   - --tls=false
-  deploy: true
   image: public.ecr.aws/eks-anywhere/tink-server:latest
   port:
     hostPortEnabled: false
