--- a/pkg/providers/tinkerbell/stack/testdata/expected_with_registry_mirror.yaml
+++ b/pkg/providers/tinkerbell/stack/testdata/expected_with_registry_mirror.yaml
@@ -1,21 +1,21 @@
 boots:
   args:
-    - -dhcp-addr=0.0.0.0:67
-    - -osie-path-override=https://anywhere-assests.eks.amazonaws.com/tinkerbell/hook
+  - -dhcp-addr=0.0.0.0:67
+  - -osie-path-override=https://anywhere-assests.eks.amazonaws.com/tinkerbell/hook
   deploy: true
   env:
-    - name: DATA_MODEL_VERSION
-      value: kubernetes
-    - name: TINKERBELL_TLS
-      value: "false"
-    - name: TINKERBELL_GRPC_AUTHORITY
-      value: 1.2.3.4:42113
-    - name: BOOTS_EXTRA_KERNEL_ARGS
-      value: tink_worker_image=1.2.3.4:443/custom/eks-anywhere/tink-worker:latest
-    - name: REGISTRY_USERNAME
-      value: "username"
-    - password: REGISTRY_PASSWORD
-      value: "password"
+  - name: TINKERBELL_TLS
+    value: "false"
+  - name: TINKERBELL_GRPC_AUTHORITY
+    value: 1.2.3.4:42113
+  - name: REGISTRY_USERNAME
+    value: username
+  - name: REGISTRY_PASSWORD
+    value: password
+  - name: BOOTS_EXTRA_KERNEL_ARGS
+    value: tink_worker_image=1.2.3.4:443/custom/eks-anywhere/tink-worker:latest insecure_registries=1.2.3.4:443
+  - name: DATA_MODEL_VERSION
+    value: kubernetes
   image: public.ecr.aws/eks-anywhere/boots:latest
 createNamespace: false
 envoy:
@@ -23,12 +23,9 @@ envoy:
   externalIp: 1.2.3.4
   image: public.ecr.aws/eks-anywhere/envoy:latest
 hegel:
-  args:
-    - --grpc-use-tls=false
-  deploy: true
   env:
-    - name: TRUSTED_PROXIES
-      value: 192.168.0.0/16
+  - name: HEGEL_TRUSTED_PROXIES
+    value: 192.168.0.0/16
   image: public.ecr.aws/eks-anywhere/hegel:latest
   port:
     hostPortEnabled: false
@@ -37,15 +34,12 @@ kubevip:
   image: public.ecr.aws/eks-anywhere/kube-vip:latest
 namespace: eksa-system
 rufio:
-  deploy: true
   image: public.ecr.aws/eks-anywhere/rufio:latest
 tinkController:
-  deploy: true
   image: public.ecr.aws/eks-anywhere/tink-controller:latest
 tinkServer:
   args:
-    - --tls=false
-  deploy: true
+  - --tls=false
   image: public.ecr.aws/eks-anywhere/tink-server:latest
   port:
     hostPortEnabled: false
