--- a/pkg/providers/tinkerbell/testdata/expected_results_cluster_tinkerbell_cp_single_node.yaml
+++ b/pkg/providers/tinkerbell/testdata/expected_results_cluster_tinkerbell_cp_single_node.yaml
@@ -157,13 +157,13 @@ spec:
         - actions:
           - environment:
               COMPRESSED: "true"
-              DEST_DISK: /dev/sda
+              DEST_DISK: '{{ index .Hardware.Disks 0 }}'
               IMG_URL: https://ubuntu.gz
             image: ""
             name: stream-image
             timeout: 600
           - environment:
-              DEST_DISK: /dev/sda2
+              DEST_DISK: '{{ formatPartition ( index .Hardware.Disks 0 ) 2 }}'
               DEST_PATH: /etc/netplan/config.yaml
               DIRMODE: "0755"
               FS_TYPE: ext4
@@ -177,7 +177,7 @@ spec:
             timeout: 90
           - environment:
               CONTENTS: 'network: {config: disabled}'
-              DEST_DISK: /dev/sda2
+              DEST_DISK: '{{ formatPartition ( index .Hardware.Disks 0 ) 2 }}'
               DEST_PATH: /etc/cloud/cloud.cfg.d/99-disable-network-config.cfg
               DIRMODE: "0700"
               FS_TYPE: ext4
@@ -196,7 +196,7 @@ spec:
                 manage_etc_hosts: localhost
                 warnings:
                   dsid_missing_source: off
-              DEST_DISK: /dev/sda2
+              DEST_DISK: '{{ formatPartition ( index .Hardware.Disks 0 ) 2 }}'
               DEST_PATH: /etc/cloud/cloud.cfg.d/10_tinkerbell.cfg
               DIRMODE: "0700"
               FS_TYPE: ext4
@@ -209,7 +209,7 @@ spec:
           - environment:
               CONTENTS: |
                 datasource: Ec2
-              DEST_DISK: /dev/sda2
+              DEST_DISK: '{{ formatPartition ( index .Hardware.Disks 0 ) 2 }}'
               DEST_PATH: /etc/cloud/ds-identify.cfg
               DIRMODE: "0700"
               FS_TYPE: ext4
@@ -219,13 +219,12 @@ spec:
             image: ""
             name: add-tink-cloud-init-ds-config
             timeout: 90
-          - environment:
-              BLOCK_DEVICE: /dev/sda2
-              FS_TYPE: ext4
-            image: ""
-            name: kexec-image
+          - image: ""
+            name: reboot-image
             pid: host
             timeout: 90
+            volumes:
+            - /worker:/worker
           name: single-node
           volumes:
           - /dev:/dev
