--- a/config/manifest/eksa-components.yaml
+++ b/config/manifest/eksa-components.yaml
@@ -5774,6 +5774,15 @@ rules:
   - update
   - watch
 - apiGroups:
+  - bmc.tinkerbell.org
+  resources:
+  - machine
+  - machine/status
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
   - cluster.x-k8s.io
   resources:
   - '*'
