--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -211,6 +211,18 @@ rules:
   - update
   - watch
 - apiGroups:
+  - packages.eks.amazonaws.com
+  resources:
+  - packagebundlecontrollers
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - tinkerbell.org
   resources:
   - hardware
