--- a/pkg/clustermarshaller/testdata/expected_marshalled_snow.yaml
+++ b/pkg/clustermarshaller/testdata/expected_marshalled_snow.yaml
@@ -16,6 +16,7 @@ spec:
     name: testsnow
   managementCluster:
     name: testcluster
+  packages: {}
 
 ---
 apiVersion: anywhere.eks.amazonaws.com/v1alpha1
