--- a/pkg/gitops/flux/testdata/cluster-config-default-path-management.yaml
+++ b/pkg/gitops/flux/testdata/cluster-config-default-path-management.yaml
@@ -16,6 +16,7 @@ spec:
   kubernetesVersion: "1.19"
   managementCluster:
     name: management-cluster
+  packages: {}
 
 ---
 kind: VSphereDatacenterConfig
