--- a/pkg/gitops/flux/testdata/cluster-config-default-path-workload.yaml
+++ b/pkg/gitops/flux/testdata/cluster-config-default-path-workload.yaml
@@ -18,6 +18,7 @@ spec:
   kubernetesVersion: "1.19"
   managementCluster:
     name: management-cluster
+  packages: {}
 
 ---
 kind: VSphereDatacenterConfig
