Add support for configuring NTP servers in ETCD
Signed-off-by: Abhinav Pandey <abhinavmpandey08@gmail.com>

--- a/pkg/providers/vsphere/config/template-cp.yaml
+++ b/pkg/providers/vsphere/config/template-cp.yaml
@@ -491,6 +491,13 @@ spec:
   etcdadmConfigSpec:
     etcdadmBuiltin: true
     format: {{.format}}
+{{- if .ntpServers }}
+    ntp:
+      enabled: true
+      servers: {{ range .ntpServers }}
+      - {{ . }}
+      {{- end }}
+{{- end }}
 {{- if (eq .format "bottlerocket") }}
     bottlerocketConfig:
       etcdImage: {{.etcdImage}}
