--- a/pkg/gitops/flux/manifests/eksa-system/kustomization.yaml
+++ b/pkg/gitops/flux/manifests/eksa-system/kustomization.yaml
@@ -2,3 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - {{.ConfigFileName}}
+{{- if .HardwareFileName }}
+- {{.HardwareFileName}}
+{{- end }}
