Fixing linter and permissions

--- a/config/manifest/eksa-components.yaml
+++ b/config/manifest/eksa-components.yaml
@@ -5776,8 +5776,8 @@ rules:
 - apiGroups:
   - bmc.tinkerbell.org
   resources:
-  - machine
-  - machine/status
+  - machines
+  - machines/status
   verbs:
   - get
   - list
