--- a/pkg/providers/tinkerbell/config/template-cp.yaml
+++ b/pkg/providers/tinkerbell/config/template-cp.yaml
@@ -67,6 +67,13 @@ spec:
         imageRepository: {{.bottlerocketBootstrapRepository}}
         imageTag: {{.bottlerocketBootstrapVersion}}
 {{- end }}
+{{- if and .proxyConfig (eq .format "bottlerocket") }}
+      proxy:
+        httpsProxy: {{.httpsProxy}}
+        noProxy: {{ range .noProxy }}
+          - {{ . }}
+        {{- end }}
+{{- end }}
 {{- if and .registryMirrorMap (eq .format "bottlerocket") }}
       registryMirror:
         endpoint: {{ .publicMirror }}
@@ -129,6 +136,13 @@ spec:
         {{- if .registryCACert }}
         caCert: |
 {{ .registryCACert | indent 10 }}
+        {{- end }}
+{{- end }}
+{{- if and .proxyConfig (eq .format "bottlerocket") }}
+      proxy:
+        httpsProxy: {{.httpsProxy}}
+        noProxy: {{ range .noProxy }}
+        - {{ . }}
         {{- end }}
 {{- end }}
       nodeRegistration:
@@ -254,6 +268,15 @@ spec:
         path: /var/lib/kubeadm/aws-iam-authenticator/pki/key.pem
 {{- end}}
 {{- if (ne .format "bottlerocket") }}
+{{- if .proxyConfig }}
+      - content: |
+          [Service]
+          Environment="HTTP_PROXY={{.httpProxy}}"
+          Environment="HTTPS_PROXY={{.httpsProxy}}"
+          Environment="NO_PROXY={{ stringsJoin .noProxy "," }}"
+        owner: root:root
+        path: /etc/systemd/system/containerd.service.d/http-proxy.conf
+{{- end }}
 {{- if .registryCACert }}
       - content: |
 {{ .registryCACert | indent 10 }}
@@ -280,9 +303,11 @@ spec:
         path: "/etc/containerd/config_append.toml"
 {{- end }}
 {{- end }}
-{{- if and .registryMirrorMap (ne .format "bottlerocket") }}
+{{- if and (or .proxyConfig .registryMirrorMap) (ne .format "bottlerocket") }}
     preKubeadmCommands:
+{{- if .registryMirrorMap }}
     - cat /etc/containerd/config_append.toml >> /etc/containerd/config.toml
+{{- end}}
     - sudo systemctl daemon-reload
     - sudo systemctl restart containerd
 {{- end }}
@@ -340,6 +365,14 @@ spec:
         sshAuthorizedKeys:
           - '{{.etcdSshAuthorizedKey}}'
         sudo: ALL=(ALL) NOPASSWD:ALL
+{{- if .proxyConfig }}
+    proxy:
+      httpProxy: {{ .httpProxy }}
+      httpsProxy: {{ .httpsProxy }}
+      noProxy: {{ range .noProxy }}
+        - {{ . }}
+      {{- end }}
+{{- end }}
 {{- if .registryMirrorMap }}
     registryMirror:
       endpoint: {{ .publicMirror }}
